Bug 154912 - CRASH/Assert: "pBasicEntry && \"FindEntry: no Entry ?!\"" ( gen)
Summary: CRASH/Assert: "pBasicEntry && \"FindEntry: no Entry ?!\"" ( gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3.2 target:7....
Keywords:
: 147415 (view as bug list)
Depends on:
Blocks: Macro Crash
  Show dependency treegraph
 
Reported: 2023-04-19 15:03 UTC by Xisco Faulí
Modified: 2023-10-25 12:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["basctl::SbTreeListBox::FindEntry(std::basic_string_view%3Cchar16_t,std::char_traits%3Cchar16_t%3E%20%3E,basctl::EntryType,weld::TreeIter%20&)"]


Attachments
bt with gen rendering (14.93 KB, text/plain)
2023-04-19 16:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-04-19 15:03:04 UTC
Steps to reproduce:
1. Open writer
2. Tools - Macros - Organize Macros - Basic - Organizer...
3. Application Macros
4. Double click on ScriptForge

-> Crash. This is happening with gen but not with gtk3

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cbd7ce7ea647a2608e1d12035a634a1637482672
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2023-04-19 15:05:48 UTC
Hi Caolán,
Since you added that assert in 97bbffc917deba872090667e9dc096ecec99d557 "weld TreeView" I thought you might be interested in this issue
Comment 3 Caolán McNamara 2023-04-19 15:54:00 UTC
The double-click to expand is taking a different route to the click arrow to expand.
Comment 4 Julien Nabet 2023-04-19 16:28:07 UTC
Created attachment 186794 [details]
bt with gen rendering

If it can help I retrieved bt but some console logs just before the assertion.
Comment 5 Commit Notification 2023-04-19 19:55:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ec73488e447a693a14a773a7fb96938036c0324

Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2023-04-19 19:56:26 UTC
seems good in trunk now, backport to 7-5 in gerrit
Comment 7 Commit Notification 2023-04-20 06:07:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/310a23fd4dde657038efb1e3fbb9db9e0cdbca3b

Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-04-20 13:27:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c2014929cf27e4b00e0ed18b9284a593bf8cf684

Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

It will be available in 7.4.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-04-26 11:59:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/580ddcc6c5e1337e097c6030ec852d5a89110ce1

Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-05-03 09:54:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-7":

https://git.libreoffice.org/core/commit/5d05bddf9e33eb6ec028119e3d872864b3426ef6

Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 stragu 2023-10-25 12:54:11 UTC
*** Bug 147415 has been marked as a duplicate of this bug. ***
Comment 12 stragu 2023-10-25 12:58:01 UTC
Verified in:

Version: 7.4.8.0.0+ / LibreOffice Community
Build ID: c2014929cf27e4b00e0ed18b9284a593bf8cf684
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded