Resolves: tdf#154912 make double-click to expand rows the same as arrow expand

the arrow case does the necessary removal of the "dummy" entry which is
necessary to get the treeview to indicate it has children, while the
double click case skipped that step, so rearrange so both behave the
same.

Change-Id: I6161d786cd58b0eea53152074dff2b035c621e7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150622
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>